[package]
name = "mask-parser"
version = "1.0.0-alpha.1"
description = "A parser for the maskfile.md format"
authors = ["Jacob Deichert <git@jakedeichert.com>"]
repository = "https://github.com/jacobdeichert/mask"
keywords = ["cli", "task", "command", "maskfile", "markdown"]
categories = ["command-line-interface", "command-line-utilities", "development-tools::build-utils", "parser-implementations"]
edition = "2024"
license = "MIT"

[dependencies]
pulldown-cmark = { version = "0.5", default-features = false }          # https://github.com/raphlinus/pulldown-cmark
mask_types = { path = "../mask_types", version = "1.0.0-alpha" }
clap = {
    version = "4.0", features = [
        # Legacy : initial features
        "wrap_help",
        # Legacy : required after update clap to v4
        "cargo",
        # Refacto
        "string", "unstable-ext",
        # Refacto not used yet
        "env"
    ]
}

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }                      # https://github.com/serde-rs/serde
serde_json = "1.0"                                                      # https://github.com/serde-rs/json

[features]
default = []
debug_test= []
